tests/ui/consts/const-eval/issue-70723.rs
static _X: () = loop {}; //~ ERROR taking a long time

fn main() {}
